pants-parser/.antlr/JarsLibParser.java
// Generated from /Users/xinwei/Documents/weixin/study-antlr/pants-parser/JarsLib.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JarsLibParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, CLASSIFIER=7, URL=8, MUTABLE=9, 
		JAR_LIBRARY=10, JARS=11, JAR=12, SCALA_JAR=13, NAME=14, ORG=15, REV=16, 
		INTRANSITIVE=17, EXCLUDES=18, EXCLUDE=19, FORCE=20, DEPENDENCIES=21, BOOL_VALUE=22, 
		SINGLE_QUOTED_STRING=23, NEWLINE=24, IDENTIFIER=25, WS=26, LINE_COMMENT=27;
	public static final int
		RULE_jarslib = 0, RULE_stmt_list = 1, RULE_stmt = 2, RULE_var_declare = 3, 
		RULE_jar_lib_stmt = 4, RULE_jars_item_list = 5, RULE_jars_item = 6, RULE_jar_list = 7, 
		RULE_jar_entries = 8, RULE_jar_entry = 9, RULE_java_jar_entry = 10, RULE_scala_jar_entry = 11, 
		RULE_jar_coordinates = 12, RULE_jar_coordinate = 13, RULE_excludes_list = 14, 
		RULE_exclude_entries = 15, RULE_exclude_entry = 16, RULE_exclude_coordinates = 17, 
		RULE_exclude_coordinate = 18, RULE_name_item = 19, RULE_dependencies_item = 20, 
		RULE_dependent_list = 21, RULE_dependent_entry = 22;
	public static final String[] ruleNames = {
		"jarslib", "stmt_list", "stmt", "var_declare", "jar_lib_stmt", "jars_item_list", 
		"jars_item", "jar_list", "jar_entries", "jar_entry", "java_jar_entry", 
		"scala_jar_entry", "jar_coordinates", "jar_coordinate", "excludes_list", 
		"exclude_entries", "exclude_entry", "exclude_coordinates", "exclude_coordinate", 
		"name_item", "dependencies_item", "dependent_list", "dependent_entry"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'('", "')'", "'['", "']'", "','", "'classifier'", "'url'", 
		"'mutable'", "'jar_library'", "'jars'", "'jar'", "'scala_jar'", "'name'", 
		"'org'", "'rev'", "'intransitive'", "'excludes'", "'exclude'", "'force'", 
		"'dependencies'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "CLASSIFIER", "URL", "MUTABLE", 
		"JAR_LIBRARY", "JARS", "JAR", "SCALA_JAR", "NAME", "ORG", "REV", "INTRANSITIVE", 
		"EXCLUDES", "EXCLUDE", "FORCE", "DEPENDENCIES", "BOOL_VALUE", "SINGLE_QUOTED_STRING", 
		"NEWLINE", "IDENTIFIER", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JarsLib.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JarsLibParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class JarslibContext extends ParserRuleContext {
		public Stmt_listContext stmt_list() {
			return getRuleContext(Stmt_listContext.class,0);
		}
		public JarslibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jarslib; }
	}

	public final JarslibContext jarslib() throws RecognitionException {
		JarslibContext _localctx = new JarslibContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jarslib);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			stmt_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stmt_listContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(JarsLibParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(JarsLibParser.NEWLINE, i);
		}
		public Stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_list; }
	}

	public final Stmt_listContext stmt_list() throws RecognitionException {
		Stmt_listContext _localctx = new Stmt_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JAR_LIBRARY || _la==IDENTIFIER) {
				{
				{
				setState(48);
				stmt();
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(49);
					match(NEWLINE);
					}
				}

				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Var_declareContext var_declare() {
			return getRuleContext(Var_declareContext.class,0);
		}
		public Jar_lib_stmtContext jar_lib_stmt() {
			return getRuleContext(Jar_lib_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				var_declare();
				}
				break;
			case JAR_LIBRARY:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				jar_lib_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declareContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JarsLibParser.IDENTIFIER, 0); }
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(JarsLibParser.SINGLE_QUOTED_STRING, 0); }
		public TerminalNode NEWLINE() { return getToken(JarsLibParser.NEWLINE, 0); }
		public Var_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declare; }
	}

	public final Var_declareContext var_declare() throws RecognitionException {
		Var_declareContext _localctx = new Var_declareContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(IDENTIFIER);
			setState(62);
			match(T__0);
			setState(63);
			match(SINGLE_QUOTED_STRING);
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(64);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jar_lib_stmtContext extends ParserRuleContext {
		public TerminalNode JAR_LIBRARY() { return getToken(JarsLibParser.JAR_LIBRARY, 0); }
		public Jars_item_listContext jars_item_list() {
			return getRuleContext(Jars_item_listContext.class,0);
		}
		public Jar_lib_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jar_lib_stmt; }
	}

	public final Jar_lib_stmtContext jar_lib_stmt() throws RecognitionException {
		Jar_lib_stmtContext _localctx = new Jar_lib_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_jar_lib_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(JAR_LIBRARY);
			setState(68);
			match(T__1);
			setState(69);
			jars_item_list();
			setState(70);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jars_item_listContext extends ParserRuleContext {
		public List<Jars_itemContext> jars_item() {
			return getRuleContexts(Jars_itemContext.class);
		}
		public Jars_itemContext jars_item(int i) {
			return getRuleContext(Jars_itemContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(JarsLibParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(JarsLibParser.NEWLINE, i);
		}
		public Jars_item_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jars_item_list; }
	}

	public final Jars_item_listContext jars_item_list() throws RecognitionException {
		Jars_item_listContext _localctx = new Jars_item_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_jars_item_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << JARS) | (1L << NAME) | (1L << DEPENDENCIES))) != 0)) {
				{
				{
				setState(72);
				jars_item();
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(73);
					match(NEWLINE);
					}
				}

				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jars_itemContext extends ParserRuleContext {
		public Name_itemContext name_item() {
			return getRuleContext(Name_itemContext.class,0);
		}
		public Dependencies_itemContext dependencies_item() {
			return getRuleContext(Dependencies_itemContext.class,0);
		}
		public Jar_listContext jar_list() {
			return getRuleContext(Jar_listContext.class,0);
		}
		public Jars_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jars_item; }
	}

	public final Jars_itemContext jars_item() throws RecognitionException {
		Jars_itemContext _localctx = new Jars_itemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jars_item);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				name_item();
				}
				break;
			case DEPENDENCIES:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				dependencies_item();
				}
				break;
			case JARS:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				jar_list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jar_listContext extends ParserRuleContext {
		public TerminalNode JARS() { return getToken(JarsLibParser.JARS, 0); }
		public Jar_entriesContext jar_entries() {
			return getRuleContext(Jar_entriesContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JarsLibParser.NEWLINE, 0); }
		public Jar_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jar_list; }
	}

	public final Jar_listContext jar_list() throws RecognitionException {
		Jar_listContext _localctx = new Jar_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_jar_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(JARS);
			setState(87);
			match(T__0);
			setState(88);
			match(T__3);
			setState(89);
			jar_entries();
			setState(90);
			match(T__4);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(91);
				match(T__5);
				}
			}

			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(94);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jar_entriesContext extends ParserRuleContext {
		public List<Jar_entryContext> jar_entry() {
			return getRuleContexts(Jar_entryContext.class);
		}
		public Jar_entryContext jar_entry(int i) {
			return getRuleContext(Jar_entryContext.class,i);
		}
		public Jar_entriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jar_entries; }
	}

	public final Jar_entriesContext jar_entries() throws RecognitionException {
		Jar_entriesContext _localctx = new Jar_entriesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_jar_entries);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JAR || _la==SCALA_JAR) {
				{
				{
				setState(97);
				jar_entry();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jar_entryContext extends ParserRuleContext {
		public Java_jar_entryContext java_jar_entry() {
			return getRuleContext(Java_jar_entryContext.class,0);
		}
		public Scala_jar_entryContext scala_jar_entry() {
			return getRuleContext(Scala_jar_entryContext.class,0);
		}
		public Jar_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jar_entry; }
	}

	public final Jar_entryContext jar_entry() throws RecognitionException {
		Jar_entryContext _localctx = new Jar_entryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_jar_entry);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				java_jar_entry();
				}
				break;
			case SCALA_JAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				scala_jar_entry();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Java_jar_entryContext extends ParserRuleContext {
		public TerminalNode JAR() { return getToken(JarsLibParser.JAR, 0); }
		public Jar_coordinatesContext jar_coordinates() {
			return getRuleContext(Jar_coordinatesContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JarsLibParser.NEWLINE, 0); }
		public Java_jar_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_java_jar_entry; }
	}

	public final Java_jar_entryContext java_jar_entry() throws RecognitionException {
		Java_jar_entryContext _localctx = new Java_jar_entryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_java_jar_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(JAR);
			setState(108);
			match(T__1);
			setState(109);
			jar_coordinates();
			setState(110);
			match(T__2);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(111);
				match(T__5);
				}
			}

			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(114);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Scala_jar_entryContext extends ParserRuleContext {
		public TerminalNode SCALA_JAR() { return getToken(JarsLibParser.SCALA_JAR, 0); }
		public Jar_coordinatesContext jar_coordinates() {
			return getRuleContext(Jar_coordinatesContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JarsLibParser.NEWLINE, 0); }
		public Scala_jar_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scala_jar_entry; }
	}

	public final Scala_jar_entryContext scala_jar_entry() throws RecognitionException {
		Scala_jar_entryContext _localctx = new Scala_jar_entryContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_scala_jar_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(SCALA_JAR);
			setState(118);
			match(T__1);
			setState(119);
			jar_coordinates();
			setState(120);
			match(T__2);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(121);
				match(T__5);
				}
			}

			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(124);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jar_coordinatesContext extends ParserRuleContext {
		public List<Jar_coordinateContext> jar_coordinate() {
			return getRuleContexts(Jar_coordinateContext.class);
		}
		public Jar_coordinateContext jar_coordinate(int i) {
			return getRuleContext(Jar_coordinateContext.class,i);
		}
		public Jar_coordinatesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jar_coordinates; }
	}

	public final Jar_coordinatesContext jar_coordinates() throws RecognitionException {
		Jar_coordinatesContext _localctx = new Jar_coordinatesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_jar_coordinates);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASSIFIER) | (1L << URL) | (1L << MUTABLE) | (1L << NAME) | (1L << ORG) | (1L << REV) | (1L << INTRANSITIVE) | (1L << EXCLUDES) | (1L << FORCE))) != 0)) {
				{
				{
				setState(127);
				jar_coordinate();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jar_coordinateContext extends ParserRuleContext {
		public Jar_coordinateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jar_coordinate; }
	 
		public Jar_coordinateContext() { }
		public void copyFrom(Jar_coordinateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GroupidContext extends Jar_coordinateContext {
		public TerminalNode ORG() { return getToken(JarsLibParser.ORG, 0); }
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(JarsLibParser.SINGLE_QUOTED_STRING, 0); }
		public GroupidContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class IntransitiveContext extends Jar_coordinateContext {
		public TerminalNode INTRANSITIVE() { return getToken(JarsLibParser.INTRANSITIVE, 0); }
		public TerminalNode BOOL_VALUE() { return getToken(JarsLibParser.BOOL_VALUE, 0); }
		public IntransitiveContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class MutableContext extends Jar_coordinateContext {
		public TerminalNode MUTABLE() { return getToken(JarsLibParser.MUTABLE, 0); }
		public TerminalNode BOOL_VALUE() { return getToken(JarsLibParser.BOOL_VALUE, 0); }
		public MutableContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class ClassifierContext extends Jar_coordinateContext {
		public TerminalNode CLASSIFIER() { return getToken(JarsLibParser.CLASSIFIER, 0); }
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(JarsLibParser.SINGLE_QUOTED_STRING, 0); }
		public ClassifierContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class ArtifactidContext extends Jar_coordinateContext {
		public TerminalNode NAME() { return getToken(JarsLibParser.NAME, 0); }
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(JarsLibParser.SINGLE_QUOTED_STRING, 0); }
		public ArtifactidContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class Exclude_jars_listContext extends Jar_coordinateContext {
		public Excludes_listContext excludes_list() {
			return getRuleContext(Excludes_listContext.class,0);
		}
		public Exclude_jars_listContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class ForceableContext extends Jar_coordinateContext {
		public TerminalNode FORCE() { return getToken(JarsLibParser.FORCE, 0); }
		public TerminalNode BOOL_VALUE() { return getToken(JarsLibParser.BOOL_VALUE, 0); }
		public ForceableContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class VersionContext extends Jar_coordinateContext {
		public TerminalNode REV() { return getToken(JarsLibParser.REV, 0); }
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(JarsLibParser.SINGLE_QUOTED_STRING, 0); }
		public TerminalNode IDENTIFIER() { return getToken(JarsLibParser.IDENTIFIER, 0); }
		public VersionContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}
	public static class UrlContext extends Jar_coordinateContext {
		public TerminalNode URL() { return getToken(JarsLibParser.URL, 0); }
		public TerminalNode SINGLE_QUOTED_STRING() { return getToken(JarsLibParser.SINGLE_QUOTED_STRING, 0); }
		public UrlContext(Jar_coordinateContext ctx) { copyFrom(ctx); }
	}

	public final Jar_coordinateContext jar_coordinate() throws RecognitionException {
		Jar_coordinateContext _localctx = new Jar_coordinateContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_jar_coordinate);
		int _la;
		try {
			setState(185);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ORG:
				_localctx = new GroupidContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(ORG);
				setState(134);
				match(T__0);
				setState(135);
				match(SINGLE_QUOTED_STRING);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(136);
					match(T__5);
					}
				}

				}
				break;
			case NAME:
				_localctx = new ArtifactidContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(NAME);
				setState(140);
				match(T__0);
				setState(141);
				match(SINGLE_QUOTED_STRING);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(142);
					match(T__5);
					}
				}

				}
				break;
			case REV:
				_localctx = new VersionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				match(REV);
				setState(146);
				match(T__0);
				setState(147);
				_la = _input.LA(1);
				if ( !(_la==SINGLE_QUOTED_STRING || _la==IDENTIFIER) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(148);
					match(T__5);
					}
				}

				}
				break;
			case INTRANSITIVE:
				_localctx = new IntransitiveContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				match(INTRANSITIVE);
				setState(152);
				match(T__0);
				setState(153);
				match(BOOL_VALUE);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(154);
					match(T__5);
					}
				}

				}
				break;
			case FORCE:
				_localctx = new ForceableContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(157);
				match(FORCE);
				setState(158);
				match(T__0);
				setState(159);
				match(BOOL_VALUE);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(160);
					match(T__5);
					}
				}

				}
				break;
			case MUTABLE:
				_localctx = new MutableContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(163);
				match(MUTABLE);
				setState(164);
				match(T__0);
				setState(165);
				match(BOOL_VALUE);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(166);
					match(T__5);
					}
				}

				}
				break;
			case CLASSIFIER:
				_localctx = new ClassifierContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(169);
				match(CLASSIFIER);
				setState(170);
				match(T__0);
				setState(171);
				match(SINGLE_QUOTED_STRING);
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(172);
					match(T__5);
					}
				}

				}
				break;
			case URL:
				_localctx = new UrlContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(175);
				match(URL);
				setState(176);
				match(T__0);
				setState(177);
				match(SINGLE_QUOTED_STRING);
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(178);
					match(T__5);
					}
				}

				}
				break;
			case EXCLUDES:
				_localctx = new Exclude_jars_listContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(181);
				excludes_list();
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(182);
					match(T__5);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Excludes_listContext extends ParserRuleContext {
		public TerminalNode EXCLUDES() { return getToken(JarsLibParser.EXCLUDES, 0); }
		public Exclude_entriesContext exclude_entries() {
			return getRuleContext(Exclude_entriesContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(JarsLibParser.NEWLINE, 0); }
		public Excludes_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_excludes_list; }
	}
